scroll overflow fix

--- a/src/popup/components/CheckSeed/style.scss
+++ b/src/popup/components/CheckSeed/style.scss
@@ -5,7 +5,7 @@
         padding: 40px 28px 28px;
         position: absolute;
         top: 0;
-        height: 100vh;
+        height: 100%;
         width: 100vw;
         display: flex;
         align-items: center;
