--- a/src/popup/components/EnterNewPassword/style.scss
+++ b/src/popup/components/EnterNewPassword/style.scss
@@ -9,7 +9,7 @@
 }
 
 .enter-new-password {
-    height: 100vh;
+    //height: 100vh;
     width: 100vw;
     display: flex;
     align-items: center;
