--- a/src/popup/components/EnterPassword/style.scss
+++ b/src/popup/components/EnterPassword/style.scss
@@ -24,12 +24,13 @@
                 cursor: text;
             }
         }
-    }
-    &__buttons {
-        display: flex;
+        &-buttons {
+            display: flex;
+            flex-direction: column;
 
-        & > button:not(:last-child) {
-            margin-right: 12px;
+            & > button:not(:last-child) {
+                margin-bottom: 12px;
+            }
         }
     }
 }
