--- a/src/popup/components/SelectContractType/style.scss
+++ b/src/popup/components/SelectContractType/style.scss
@@ -1,7 +1,7 @@
 @import 'src/popup/styles/colors';
 
 .select-wallet {
-    height: 100vh;
+    //height: 100vh;
     width: 100vw;
     display: flex;
     align-items: center;
