--- a/src/popup/pages/WelcomePage/style.scss
+++ b/src/popup/pages/WelcomePage/style.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors';
 
 .welcome-page {
-    height: 100vh;
+    //height: 100vh;
     width: 100vw;
     display: flex;
     align-items: center;
